@@ -1,6 +1,10 @@
 #ifndef _IPEXPORT_H_
 #define _IPEXPORT_H_
 
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 #ifndef ANY_SIZE
 #define ANY_SIZE 1
 #endif
@@ -18,5 +22,9 @@ typedef struct {
   LONG NumAdapters;
   IP_ADAPTER_INDEX_MAP Adapter[ANY_SIZE];
 } IP_INTERFACE_INFO, *PIP_INTERFACE_INFO;
+
+#ifdef __cplusplus
+}
+#endif
 
 #endif /* _IPEXPORT_H_ */
