@@ -5,6 +5,10 @@
 #include <ipexport.h>
 #include <iptypes.h>
 
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 DWORD WINAPI CreateIpForwardEntry(PMIB_IPFORWARDROW);
 DWORD WINAPI CreateIpNetEntry(PMIB_IPNETROW);
 DWORD WINAPI DeleteIpForwardEntry(PMIB_IPFORWARDROW);
@@ -36,5 +40,9 @@ DWORD WINAPI SetIpNetEntry(PMIB_IPNETROW);
 DWORD WINAPI SetIpStatistics(PMIB_IPSTATS);
 DWORD WINAPI SetIpTTL(UINT);
 DWORD WINAPI SetTcpEntry(PMIB_TCPROW);
+
+#ifdef __cplusplus
+}
+#endif
 
 #endif /* _IPHLPAPI_H_ */
